--- a/Project.toml
+++ b/Project.toml
@@ -4,9 +4,7 @@ authors = ["Juanma Bellon <juan.bellon@tiobe.com>"]
 version = "0.1.0"
 
 [deps]
-DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
-Infiltrator = "5903a43b-9cc3-4c30-8d17-598619ec4e9b"
 JuliaSyntax = "70703baa-626e-46a2-a12c-08ffd08c73b4"
 
 [compat]
-Infiltrator = "1.8.8"
+JuliaSyntax = "1"
