--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,9 @@ authors = ["Juanma Bellon <juan.bellon@tiobe.com>"]
 version = "0.1.0"
 
 [deps]
+ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
 JuliaSyntax = "70703baa-626e-46a2-a12c-08ffd08c73b4"
 
 [compat]
+ArgParse = "1.2.0"
 JuliaSyntax = "1"
