--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 TestItems = "1c621080-faea-4a02-84b6-bbd5e436b8fe"
 
 [compat]
+Julia = "1.10"
 ArgParse = "1.2"
 DataStructures = "0.18.22"
 IOCapture = "0.2.5"
