--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,7 +5,7 @@ on: push
 jobs:
   test:
     name: Run tests
-    runs-on: [ self-hosted, linux ]
+    runs-on: linux
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
