--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -4,8 +4,11 @@ on: push
 
 jobs:
   test:
+    strategy:
+      matrix:
+        os: [ ubuntu-latest, windows-latest ]
     name: Run tests
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
