Explicitly enable line ending conversion for .val files

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,8 @@
 # Auto detect text files and perform LF normalization
-*          text=auto
+* text=auto
 
-# These file should always be checked out with OS line endings (simulated cmdline output)
-*.val text
+# These files should always be checked out with OS line endings (simulated cmdline output)
+*.val text=auto
 
 # Fix syntax highlighting on GitHub to allow comments
 .vscode/*.json linguist-language=JSON-with-Comments
