Set all line endings for test files to LF

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,8 @@
 # Auto detect text files and perform LF normalization
 * text=auto
 
-# These files should always be checked out with OS line endings (simulated cmdline output)
-*.val text=auto
+# Check out val files with lf, actual output EOL will be converted in tests for Windows
+*.val text eol=lf
 
 # Fix syntax highlighting on GitHub to allow comments
 .vscode/*.json linguist-language=JSON-with-Comments
