Golden File Tests now use checks2 implementations
Updated some of the val files because the rule implementations have been improved. Val files for which tests are still missing are marked as 'skipped'. Enabled two val files that were switched off.

Also:
* Added a launch configuration to just execute a Julia file

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,9 +7,25 @@
         {
             "type": "julia",
             "request": "launch",
-            "name": "Debug active Julia check file",
+            "name": "Debug active Julia check/checks2 file",
             "program": "${workspaceFolder}/.vscode/DebugCheck.jl",
             "args": [ "${file}" ],
+            "stopOnEntry": false,
+            "cwd": "${workspaceFolder}",
+            "env": {},
+            "juliaEnv": "${command:activeJuliaEnvironment}",
+            "presentation": {
+                "hidden": false,
+                "group": "checks",
+                "order": 1
+            }
+        }   
+        ,   
+        {  
+            "type": "julia",
+            "request": "launch",
+            "name": "Debug selected Julia file",
+            "program": "${file}",
             "stopOnEntry": false,
             "cwd": "${workspaceFolder}",
             "env": {},
