--- a/.gitattributes
+++ b/.gitattributes
@@ -10,6 +10,9 @@
 # Julia
 *.jl linguist-language=Julia
 
+# Ensure line endings stay consistent for this test
+test/TestConsistentLineEndings.jl text eol=lf
+
 # Documents
 *.md       text diff=markdown
 *.txt      text
@@ -24,7 +27,6 @@
 *.bat      text eol=crlf
 *.cmd      text eol=crlf
 *.ps1      text eol=crlf
-
 # Serialisation
 *.json     text
 *.toml     text
